	- Fixed: Permissions as set by Debian must be keep (bind9)
	- Fixed: Slave DNS zone files should be put in dedicated directory (Bind9)
	- Fixed: SPF record syntax

GUI:
	- Added option allowing to disconnect an user without removing its session
	- Added option allowing to protect/unprotect Web folders
	- Enhancement: Improved layout for admin/settings.php page
	- Fixed: Allow to trigger more than one privilege callback functions for navigation
	- Fixed: External mail server option not implemented in admin/domain_edit.page
	- Fixed: i18n issues in reseller_add.php and reseller_edit.php pages
	- Fixed: Hide menus referring to unplayable features
	- Fixed: Sessions not killed (admin/session_manage.php)
	- Fixed: Unable to display the domain_edit.php/reseller_edit.php pages in some context (SQL queries too big)
	- Removed both order panel and billing interfaces
	- Rewritten Ftp account add page
	- Updated iMSCP jQuery tooltip plugin according jQuery library changes

SETUP:
	- Added support for external repositories (Debian/Ubuntu)
	- Added hook.d directory for storage of installer hooks files
	- Fixed: add-apt-repository - unknown -y option (Ubuntu Lucid Lynx)
	- Fixed: APT packages manager must be configured before any package installation
	- Fixed: All MySQL secure installation tasks are now done by the i-MSCP installer
	- Fixed: i-MSCP must allow usage of remote SQL server
	- Fixed: Both imsc-autoinstall and imscp-setup scripts must allow per item reconfiguration
	- Fixed: Duplicate entries in sources.list file (Ubuntu)
	- Fixed: Do not show any dialog when --noprompt option is used
	- Fixed: Make error messages free of any ANSI color and end of line codes in dialog
	- Fixed: Uninstall unneeded packages when switching to another server implementation

VENDOR:
	- Updated jQuery to 1.9.1
	- Updated jQuery UI to 1.10.0
	- Updated Net_DNS to Net_DNS2 (version 1.3.0)
	- Updated Zend Framework to 1.12.3

Tickets:
	- Fixed #064: Nice to have - PHP FPM